<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_activity_title"
            android:textColor="@color/greenText"
            android:textSize="@dimen/all_title_size"
            android:layout_marginTop="@dimen/margin_top_each_elem"/>

        <EditText
            android:id="@+id/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_each_elem"
            android:hint="@string/login_edittext_hint"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/pass_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_each_elem"
            android:hint="@string/pass_edittext_hint"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_each_elem"
            android:text="@string/login_btn" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/back_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_top_each_elem"
            android:text="@string/backward_btn_text" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
